--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
+        <link
+            rel="icon"
+            href="%PUBLIC_URL%/logo.svg"
+            sizes="any"
+            type="image/svg+xml"
+        />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta name="PSPX" content="Deploy small style changes instantly!" />
