use stripe checkout

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,12 @@
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
+        <script src="https://cdn.jsdelivr.net/gh/BrianJenney/slapjunky@stage/public/css.js"></script>
+        <script>
+            if (window.pspx) {
+                window.pspx.init({ spaceid: '1e3e59', isPreview: false });
+            }
+        </script>
         <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
