update active config after saving fix styling for account page

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         <script src="https://cdn.jsdelivr.net/gh/BrianJenney/slapjunky@stage/public/css.js"></script>
         <script>
             if (window.pspx) {
-                window.pspx.init({ spaceid: 'c6460a' });
+                window.pspx.init({ spaceid: 'b60f11' });
             }
         </script>
         <!--
