--- a/public/index.html
+++ b/public/index.html
@@ -27,14 +27,28 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
         <title>PSPX App</title>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=G-0ZJKHJ3XM5"
+        ></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+
+            gtag('config', 'G-0ZJKHJ3XM5');
+        </script>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
-        <script src="https://cdn.jsdelivr.net/gh/BrianJenney/slapjunky@stage/public/css.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/BrianJenney/pspx@latest/pspx.js"></script>
         <script>
             if (window.pspx) {
-                window.pspx.init({ spaceid: 'b60f11' });
+                window.pspx.init({ spaceid: '1e3e59', env: 'development' });
             }
         </script>
         <!--
