add google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,12 @@
             async
             src="https://www.googletagmanager.com/gtag/js?id=G-0ZJKHJ3XM5"
         ></script>
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=UA-219220373-1"
+        ></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag() {
@@ -39,7 +45,7 @@
             }
             gtag('js', new Date());
 
-            gtag('config', 'G-0ZJKHJ3XM5');
+            gtag('config', 'UA-219220373-1');
         </script>
     </head>
     <body>
