--- a/public/index.html
+++ b/public/index.html
@@ -47,14 +47,15 @@
 
             gtag('config', 'UA-219220373-1');
         </script>
+        <script src="https://cdn.jsdelivr.net/gh/BrianJenney/pspx@latest/pspx.js"></script>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
-        <script src="https://cdn.jsdelivr.net/gh/BrianJenney/pspx@latest/pspx.js"></script>
+
         <script>
             if (window.pspx) {
-                window.pspx.init({ spaceid: '1e3e59', env: 'development' });
+                window.pspx.init({ spaceid: '1e3e59', env: 'dev' });
             }
         </script>
         <!--
